--- a/pagina01.html
+++ b/pagina01.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1> Bienvenido a todos</h1>
+    <h1> Bienvenido a todos en la ciudad de bogota</h1>
   </body>
 </html>
