--- a/pagina01.html
+++ b/pagina01.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1> Bienvenido a todos en la ciudad de bogota</h1>
+    <h2> reubicacion de hayuelos</h2>
   </body>
 </html>
